[project]
name = "pubmed-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "adwaitha",email = "adwaithapk2018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [{include = "pubmed_papers"}] 


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
requests = "^2.32.3"
pandas = "^2.2.3"
xmltodict = "^0.14.2"
