[tool.poetry]
name = "pubmed-papers"
version = "0.1.0"
description = "A package for fetching PubMed papers"
authors = ["Adwaitha <adwaithapk2018@gmail.com>"]
license = "MIT"
readme = "README.md"

# Ensuring Poetry detects your package correctly
packages = [{ include = "pubmed_papers" }]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
xmltodict = "^0.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
